--- a/gift-certificate.html
+++ b/gift-certificate.html
@@ -23,7 +23,7 @@
 <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
+      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
         г. Москва
         <img src="img/icons/down.svg" alt="">
       </div>
@@ -121,7 +121,7 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
   <a href="index.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
@@ -171,7 +171,7 @@
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
           Удилища
@@ -201,7 +201,7 @@
 
 
 <div class="bg-[#F4F4F4] relative z-[0] overflow-hidden flex items-center 
-rounded-[24px] mb-[60px] mt-[20px] p-[90px] max-[1300px]:p-[40px] max-[767px]:px-[20px]">
+rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] max-[767px]:px-[20px]">
     <div class="flex flex-col items-start">
         <h2 class="max-w-[840px] font-lena mb-[30px] uppercase text-[#009FFF]
         text-[80px] leading-[100%] max-[1300px]:text-[44px] max-[767px]:text-[32px] max-[767px]:mb-[20px]">Лучший подарок- снасти для рыбалки!</h2>
