--- a/profile-view-history.html
+++ b/profile-view-history.html
@@ -21,7 +21,7 @@
 <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
+      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
         г. Москва
         <img src="img/icons/down.svg" alt="">
       </div>
@@ -119,7 +119,7 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
   <a href="index.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
@@ -170,7 +170,7 @@
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
           Удилища
@@ -351,11 +351,11 @@
         <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-[30px]">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -416,11 +416,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -481,11 +481,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -546,11 +546,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -611,11 +611,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -686,11 +686,11 @@
         <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-[30px]">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -751,11 +751,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -816,11 +816,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -881,11 +881,11 @@
           </div>
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
