--- a/brands.html
+++ b/brands.html
@@ -23,7 +23,7 @@
 <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
+      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
         г. Москва
         <img src="img/icons/down.svg" alt="">
       </div>
@@ -121,7 +121,7 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
   <a href="index.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
@@ -171,7 +171,7 @@
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
           Удилища
@@ -200,7 +200,7 @@
 <div class="container mt-4">
 
 
-  <ul class="flex-js-c gap-1 mb-7">
+  <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
     <li>
       <a href="index.html" class="text-[15px] text-[#6E6E6E]">Главная</a>
     </li>
@@ -222,57 +222,57 @@
 
   <div class="flex items-center max-[767px]:overflow-x-auto" style="scrollbar-width: none; -ms-overflow-style: none;">
     <span>А</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>B</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>C</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>D</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>E</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>F</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>G</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>H</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>I</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>J</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>K</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>L</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>M</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>N</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>O</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>P</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>Q</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>R</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>S</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>T</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>U</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>V</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>W</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>X</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>Y</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
     <span>Z</span>
-    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span class="w-[6px] min-w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
   </div>
 
   <h3 class="font-medium text-[#323232] mt-[30px] text-[24px] mb-[24px]">Популярные бренды</h3>
