--- a/comparisons.html
+++ b/comparisons.html
@@ -21,7 +21,7 @@
 <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
+      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
         г. Москва
         <img src="img/icons/down.svg" alt="">
       </div>
@@ -121,7 +121,7 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
   <a href="index.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
@@ -172,7 +172,7 @@
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
           Удилища
@@ -292,7 +292,7 @@
           <td class="border-r px-4 text-[16px] md:text-[18px]">
             Jaxon
           </td>
-          <td class="border-r px-4-6 text-[16px] md:text-[18px]">
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
             Jaxon
           </td>
         </tr>
@@ -355,13 +355,13 @@
           <td class="pt-6 border-r">
 
           </td>
-          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6">
+          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6 pb-4">
             <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
               В корзину
               <img src="img/icons/basket-white.svg" alt="">
             </button>
           </td>
-          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6">
+          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6 pb-4">
             <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
               В корзину
               <img src="img/icons/basket-white.svg" alt="">
