--- a/modal-select-country.html
+++ b/modal-select-country.html
@@ -21,7 +21,7 @@
 <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
+      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
         г. Москва
         <img src="img/icons/down.svg" alt="">
       </div>
@@ -119,7 +119,7 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
   <a href="index.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
@@ -169,7 +169,7 @@
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
           Удилища
@@ -279,11 +279,11 @@
         <div data-for="6" class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -521,11 +521,11 @@
         <div data-for="6" class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -661,11 +661,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-full.svg " alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -730,11 +730,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -804,11 +804,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -874,11 +874,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -950,11 +950,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1020,11 +1020,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1127,11 +1127,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-full.svg " alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1196,11 +1196,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1270,11 +1270,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1340,11 +1340,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1416,11 +1416,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
@@ -1486,11 +1486,11 @@
         <div class="swiper-slide">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2">
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/heard-gray.svg" alt="heard-gray">
                 </div>
-                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+                <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
                   <img src="img/icons/rating-gray.svg" alt="rating-gray">
                 </div>
               </div>
