--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
   <li class="mb-2 underline">
     <a href="sing-in.html">sing-in.html</a>
   </li>
+  <li class="mb-2 underline">
+    <a href="variants-popup.html">sing-in.html</a>
+  </li>
 </ul>
 
 
